<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        >
        
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/welcome"
	        android:textSize="32sp"
	        android:textColor="@android:color/white"/>
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/firsttime"
	        android:gravity="center_horizontal"/>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:weightSum="2"
	        android:layout_marginTop="20dp">
	        <ImageView 
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="199dp"
	        android:src="@drawable/washer2"
	        android:contentDescription="@string/washers"
	        android:layout_gravity="center_horizontal"
	        />
	        <ImageView 
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="199dp"
	        android:src="@drawable/dryer2"
	        android:contentDescription="@string/dryers"
	        android:layout_gravity="center_horizontal"
	        />
	    </LinearLayout>
	    
  
	</LinearLayout>
	
    <Button
        android:id="@+id/setPrefbtn"
        android:textSize="20sp" 
        android:text="@string/setprefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        
        />
</LinearLayout>